# Enterprise-Automation-Agent

./: .gitignore  README.md  pyproject.toml  start.sh
agent/: bootstrap.py  config.json  logger.py  main.py
agent/adapter/deserialization/: context.py  node.py
agent/adapter/inbound/http/: api.py  dependencies.py
agent/adapter/outbound/: azure_openai_adapter.py  chromadb_adapter.py  jinja_template_renderer.py  mcp_adapter.py  mcp_oauth_flow.py  mcp_token_storage.py  openai_adapter.py  planner_json_serializer.py  postgres_adapter.py  sqlite_analytics_adapter.py
agent/adapter/serialization/: context.py  node.py
agent/application/ports/outbound/: analytics_db_interface.py  context_serializer_interface.py  episodic_memory_interface.py  llm_interface.py  memory_interface.py  procedural_memory_interface.py  semantic_memory_interface.py  template_renderer_interface.py  tool_interface.py
agent/application/services/: memory_resolution_service.py
agent/application/usecases/: prompt_rendering.py
agent/domain/: agent.py  context.py  planner.py  prompt_rendering.py  react.py
agent/domain/prompts/planner/: extension_planning_prompt.py  planning_prompt.py  replanning_prompt.py
agent/domain/prompts/react/: parameter_generation.py  reflection_prompt.py  step_observation.py
agent/domain/react/: act.py  judge.py  observe.py  plan.py  react.py  reflect.py
tools/: data_quality.py  notion.py  websearch.py
