[project]
name = "EnterpriseAutomationAgent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.13.0",
    "fastapi>=0.135.3",
    "fastmcp>=3.2.0",
    "jinja2>=3.1.6",
    "langchain-text-splitters>=1.1.1",
    "mcp>=1.27.0",
    "neo4j>=6.1.0",
    "openai>=2.30.0",
    "pandas>=3.0.2",
    "pgvector>=0.4.2",
    "psycopg>=3.3.3",
    "psycopg2>=2.9.11",
    "pydantic-graph>=1.70.0",
    "sqlite-vec>=0.1.9",
    "uuid>=1.30",
]
